--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+body{
+  display: flex;
+  width: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.welcome-message{
+  background-color: hsla(120, 79%, 34%, 0.795);
+  padding: 20px;
+  margin: 0 auto;
+  font-size: 1rem;
+  border-radius: 15px;
+  color: white;
+  max-width: 250px;
+  text-align: center;
+  margin-bottom: 20px;
+
+}
+
+.login-message{
+  background-color: hsla(11, 90%, 37%, 0.795);
+  padding: 20px;
+  margin: 0;
+  font-size: 1rem;
+  border-radius: 15px;
+  color: white;
+  max-width: 250px;
+  text-align: center;
+  margin-bottom: 20px;
+  text-align: center;
 }
